package com.proyectofinal.nfconsumer;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class NfconsumerApplication {

	public static void main(String[] args) {
		SpringApplication.run(NfconsumerApplication.class, args);
	}

}
