package com.proyectofinal.nfconsumer.auth.repository;

import java.util.List;
import java.util.Optional;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.Query;

public interface TokenRepository extends JpaRepository<Token, Integer> {

    @Query(value = """
        select t from Token t inner join User u\s
        on t.user.id = u.id\s
        where u.id = :id and (t.isExpired = false or t.isRevoked = false)\s
        """)
    List<Token> findAllValidTokenByUser(Integer id);
  
    Optional<Token> findByToken(String token);
}