package com.proyectofinal.nfconsumer.user.repository;

public record UserResponse(
        String name,
        String email
) {
}